--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,22 +1,16 @@
 apply plugin: 'com.android.application'
-//apply plugin: 'com.neenbedankt.android-apt'
 
-def releaseTime() {
-    return new Date().format("yyyy-MM-dd_HH-mm", TimeZone.getTimeZone("GMT+8"))
-}
 
-def ext = rootProject.ext
 android {
-    compileSdkVersion ext.compileSdkVersion
-//    buildToolsVersion ext.buildToolsVersion
+    compileSdkVersion rootProject.ext.android["compileSdkVersion"]
     defaultConfig {
         applicationId "com.aries.library.fast.demo"
-        minSdkVersion ext.minSdkVersion
-        targetSdkVersion ext.targetSdkVersion
-        versionCode ext.versionCode
-        versionName ext.versionName
+        minSdkVersion rootProject.ext.android["minSdkVersion"]
+        targetSdkVersion rootProject.ext.android["targetSdkVersion"]
+        versionCode rootProject.ext.android["versionCode"]
+        versionName rootProject.ext.android["versionName"]
         multiDexEnabled true
-        vectorDrawables.useSupportLibrary  true
+        vectorDrawables.useSupportLibrary true
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         buildConfigField "String", "BASE_URL", "\"https://api.douban.com/\""
     }
@@ -46,18 +40,18 @@ android {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
             signingConfig signingConfigs.release
-//            applicationVariants.all { variant ->
-//                variant.outputs.each { output ->
-//                    def outputFile = output.outputFile
-//                    if (outputFile != null && outputFile.name.endsWith('.apk')) {
-//                        if (variant.buildType.name.equals('release')) {
-//                            def fileName = "FastLib_v${defaultConfig.versionName}_${releaseTime()}.apk"
-//                            //output.outputFile = new File(outputFile.parent, fileName)
-////                            output.outputFile = new File(outputFile.parent, "sample.apk")
-//                        }
-//                    }
-//                }
-//            }
+            applicationVariants.all { variant ->
+                variant.outputs.all { output ->
+                    def outputFile = output.outputFile
+                    if (outputFile != null && outputFile.name.endsWith('.apk')) {
+                        if (variant.buildType.name.equals('release')) {
+                            def fileName = "FastLib_v${defaultConfig.versionName}_${releaseTime()}.apk"
+                            outputFileName = fileName
+                        }
+                    }
+                }
+            }
+
         }
     }
 
@@ -68,31 +62,41 @@ android {
 }
 
 dependencies {
-    compile fileTree(include: ['*.jar'], dir: 'libs')
+    api fileTree(include: ['*.jar'], dir: 'libs')
     implementation project(':library')
 
     //设置界面Item库
     //以下库library里使用provided只是编译使用时需根据项目选择相应版本
-    compile 'com.android.support:design:'.concat(ext.supportVersion)
-    compile 'com.android.support:appcompat-v7:'.concat(ext.supportVersion)
-    compile 'com.android.support:recyclerview-v7:'.concat(ext.supportVersion)
+    api(rootProject.ext.dependencies["design"]) {
+        exclude module: "support-compat"
+        exclude module: "support-annotations"
+        exclude module: "appcompat-v7"
+        exclude module: "recyclerview-v7"
+
+    }
+    api rootProject.ext.dependencies["appcompat"]
+
+    api rootProject.ext.dependencies["recyclerview"]
     //万能适配器--一般都需要吧
-    compile 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.34'
+    api rootProject.ext.dependencies["BaseRecyclerViewAdapterHelper"]
     //webView库 继承FastWebActivity需要,不需要内置WebView可以不compile
-    compile 'com.just.agentweb:agentweb:4.0.2'
+    api rootProject.ext.dependencies["agentweb"]
     //webView提供下载功能
-    compile 'com.just.agentweb:download:4.0.2'
+    api rootProject.ext.dependencies["agentweb-downLoad"]
 //    compile 'com.just.agentweb:filechooser:4.0.2'
     //下拉刷新库注意刷新头SmartRefreshHeader版本最好对应尤其头版本不要低于SmartRefreshLayout版本
-    compile 'com.scwang.smartrefresh:SmartRefreshLayout:1.0.3'
-    //图片加载 4.X
-    compile 'com.github.bumptech.glide:glide:4.0.0'
+    api rootProject.ext.dependencies["smartRefreshLayout"]
     //以上库library里使用provided只是编译使用时需根据项目选择相应版本
-    compile 'cn.bingoogolapple:bga-banner:2.1.7@aar'
-    compile 'com.scwang.smartrefresh:SmartRefreshHeader:1.0.3'
-    compile 'com.github.lygttpod:SuperTextView:2.1.5'
-    compile 'com.flyco.labelview:FlycoLabelView_Lib:1.0.2@aar'
-    compile 'com.just.agentweb:agentweb:3.0.0'
-    annotationProcessor 'com.github.bumptech.glide:compiler:4.0.0'
-    annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
+    api rootProject.ext.dependencies["bgaBanner"]
+    api rootProject.ext.dependencies["smartRefreshLayoutHeader"]
+    api rootProject.ext.dependencies["superTextView"]
+    api rootProject.ext.dependencies["FlycoLabelView"]
+    //图片加载 4.X
+    annotationProcessor rootProject.ext.dependencies["glideCompiler"]
+    annotationProcessor rootProject.ext.dependencies["butterknifeCompiler"]
+}
+
+
+def releaseTime() {
+    return new Date().format("yyyy-MM-dd_HH-mm", TimeZone.getTimeZone("GMT+8"))
 }
